--- a/index.ipynb
+++ b/index.ipynb
@@ -67,21 +67,21 @@
     "    return 3*x*6\n",
     "\n",
     "def three_x_y_at_nine(x):\n",
-    "    return 3*x*9"
+    "    return 3*x*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "36"
+       "9"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
