--- a/index.ipynb
+++ b/index.ipynb
@@ -67,27 +67,27 @@
     "    return 3*x*6\n",
     "\n",
     "def three_x_y_at_nine(x):\n",
-    "    return 3*x*"
+    "    return 3*x*9"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9"
+       "3"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "three_x_y_at_one(3) # 9\n",
+    "three_x_y_at_one(1) # 9\n",
     "# 36"
    ]
   },
