--- a/index.ipynb
+++ b/index.ipynb
@@ -87,7 +87,8 @@
     }
    ],
    "source": [
-    "three_x_y_at_one(1) # 9\n",
+    "three_x_y_at_one(1)\n",
+    "three_x_y_at_one(1)# 9\n",
     "# 36"
    ]
   },
