--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,7 @@
     "    return 3*x\n",
     "\n",
     "def three_x_y_at_three(x):\n",
-    "    return 9*x\n",
+    "    return 3*x*3\n",
     "\n",
     "def three_x_y_at_six(x):\n",
     "    return 3*x*6\n",
