Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -88,7 +88,8 @@
    ],
    "source": [
     "three_x_y_at_one(1)\n",
-    "three_x_y_at_three(3)# 9\n",
+    "three_x_y_at_three(3)# \n",
+    "three_x_y_at_six(3)# 9\n",
     "# 36"
    ]
   },
