--- a/index.ipynb
+++ b/index.ipynb
@@ -90,6 +90,8 @@
     "three_x_y_at_one(1)\n",
     "three_x_y_at_three(3)# \n",
     "three_x_y_at_six(2)# 9\n",
+    "\n",
+    "range\n",
     "# 36"
    ]
   },
