Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -72,16 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "36"
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
     "three_x_y_at_three(3)# \n",
     "three_x_y_at_six(2)# 9\n",
     "\n",
-    "range\n",
+    "list(range(0,11))\n",
     "# 36"
    ]
   },
