--- a/index.ipynb
+++ b/index.ipynb
@@ -118,10 +118,10 @@
     "    return 3*3\n",
     "\n",
     "def y_values_for_at_six(x_values):\n",
-    "    retr\n",
+    "    return 3*6\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
-    "    pass"
+    "    return 3*9"
    ]
   },
   {
