Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -121,7 +121,8 @@
     "    return 3*6\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
-    "    return 3*9"
+    "    return 3*9\n",
+    "\n"
    ]
   },
   {
