--- a/index.ipynb
+++ b/index.ipynb
@@ -104,9 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "zero_to_ten = list(range(0, 11))\n",
     "zero_to_four = list(range(0, 5))\n",
@@ -122,6 +133,8 @@
     "\n",
     "def y_values_for_at_nine(x_values):\n",
     "    return 3*9\n",
+    "\n",
+    "y_values_for_at_one(zero_to_four)\n",
     "\n"
    ]
   },
