--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_one():\n",
-    "    pass"
+    "    return 3*1"
    ]
   },
   {
@@ -298,7 +298,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_three():\n",
-    "    pass"
+    "    return 3*3"
    ]
   },
   {
