Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,12 +303,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_six():\n",
-    "    pass"
+    "    return 3*6"
    ]
   },
   {
@@ -318,7 +318,7 @@
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_nine():\n",
-    "    pass"
+    "    retru"
    ]
   },
   {
