Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -313,12 +313,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "def df_dx_when_y_equals_nine():\n",
-    "    retru"
+    "    return 3*9"
    ]
   },
   {
